--- a/PiniT/Views/Home/Contact.cshtml
+++ b/PiniT/Views/Home/Contact.cshtml
@@ -1,17 +1,50 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+    <style>
+        body {
+         
+            background-image: url('../../Content/Images/background.jpg');
+            background-size:cover;
+        }
+    </style>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+    <div class="homeboxaa col-md-3">
+        <h1>Contact us...</h1>
+    </div>
+
+    <div class="row">
+        <div class="homeboxc col-md-12">
+            <div class="row">
+                <address class="cold-m-4 text-center mx-auto">
+                    One Microsoft Way<br />
+                    Redmond, WA 98052-6399<br />
+                    <abbr title="Phone">P:</abbr>
+                    425.555.0100
+                </address>
+
+
+
+                <address class="cold-m-4 text-center mx-auto">
+                    <strong>Support:</strong>  <a href="mailto:Support@example.com">Support@example.com</a><br />
+                    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+                </address>
+
+
+
+                <address class="cold-m-4 text-center mx-auto">
+                    <strong>Join us:</strong><br />
+                    <img src="~/Content/Images/iconsm.png" style="width:200px"/>
+                </address>
+
+            </div>
+        </div>
+        </div>
+
+
+
+
+
+
+
