--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -134,3 +134,28 @@ h3.a {
     margin-top:10px;
     margin-bottom: 30px;
 }
+
+.homeboxc {
+
+    padding: 100px;
+    background-color: #404040;
+    opacity: 0.95;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    font-family: 'Berkshire Swash', cursive;
+    font-size: 100%;
+    color: white;
+    margin-top:100px;
+    margin-bottom: 40px;
+}
+
+.homeboxaa {
+    font-family: 'Lobster', cursive;
+    font-size: 200%;
+    color: white;
+    text-shadow: 3px 2px black;
+    padding: 10px;
+    margin-top: 30px;
+    background-color: #404040;
+    opacity: 0.8;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
