--- a/PiniT/Views/Restaurants/CustomerIndex.cshtml
+++ b/PiniT/Views/Restaurants/CustomerIndex.cshtml
@@ -18,8 +18,7 @@
     </style>
 <br>
 
-<h2 class="a  mx-auto text-center">Available Restaurants</h2>
-
+<h2 class="a  mx-auto text-center" style="color:rgba(250, 250, 250, 0.7);">Available Restaurants</h2>
 
 <div class="row mt-3 mb-1">
     <div id="a" class="col-md-6 p-3 border rounded bg-light mx-auto">
