--- a/PiniT/Content/Site.css
+++ b/PiniT/Content/Site.css
@@ -51,15 +51,15 @@ h3.a {
     background-size: cover;
     width: 100%;
     margin-bottom:20px;
+    opacity:1;
 }
 
 .homeimagetxt {
-    padding: 35px;
     font-family: 'Courgette', cursive;
-    font-size: 200%;
-    grid-auto-rows: 150px;
+    font-size: 28px;
+    /*grid-auto-rows: 150px;*/
     color: white;
-    text-shadow: 3px 2px black;
+    text-shadow: 2px 2px black;
 }
 
 .roundimage {
