--- a/PiniT/Views/Images/AddImage.cshtml
+++ b/PiniT/Views/Images/AddImage.cshtml
@@ -32,7 +32,7 @@
             <div class="form-group">
                 <div class="col-md-offset-4 btn-group">
                     <input type="submit" value="Add Image" class="btn btn-success" />
-                    @Html.ActionLink("Back", "ManagerIndex", null, new { @class = "btn btn-dark" })
+                    @Html.ActionLink("Back", "ManagerIndex","Restaurants", null, new { @class = "btn btn-dark" })
                 </div>
             </div>
         </div>
