--- a/PiniT/Views/Account/Login.cshtml
+++ b/PiniT/Views/Account/Login.cshtml
@@ -3,33 +3,52 @@
 @{
     ViewBag.Title = "Log in";
 }
+    <style>
+        body{
+            background-color:whitesmoke;
+        }
+        #loginimg {
+            background-image: url('Images/about.jpg');
+            height: 650px;
+            background-size: cover;
+            width: 100%;
+            
+            margin-bottom: 30px;
+        }
+    </style>
 
-<h2>@ViewBag.Title.</h2>
 <div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
+
+    <div class="container col-md-7">
+        <img id="loginimg" src="https://cdn11.bigcommerce.com/s-nu6nzn6ej0/images/stencil/1280x1280/products/5708/9868/Interior-waterfall-petrified-wood__50263.1544123948.jpg?c=2&imbypass=on" alt="loginImg" />
+    </div>
+
+
+    <div class="col-md-5 text-center">
+
+        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <h2 class="a mt-1 mx-auto">@ViewBag.Title</h2>
+            <hr />
+            <div class="container border border-light shadow">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                <div class="form-group text-center">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label font-italic font-weight-bold mr-2" })
+                    <div class="col-md-6 col-sm-6 mx-auto">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
+                <div class="form-group text-center">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label font-italic font-weight-bold mr-5" })
+                    <div class="col-md-6 col-sm-6 text-center font-italic mx-auto">
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
+                    <div class="col-md-offset-2 col-md-10 mx-auto">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
@@ -37,25 +56,22 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                    <div class="col-md-offset-2 col-md-6 mx-auto">
+                        <input type="submit" value="Log in" class="btn btn-success" />
                     </div>
                 </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
-                </p>
+                @*<p>
+            @Html.ActionLink("Register as a new user", "Register")
+        </p>*@
                 @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
+        <p>
+            @Html.ActionLink("Forgot your password?", "ForgotPassword")
+            </p>*@
+                </div>
+               }
     </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
+
+
 </div>
 
 @section Scripts {
